fix(datagrid): use correct layers, remove no-op z-indexes (#774)
- remove rule for missing `datagrid-popover` layer
- remove redundant `datagrid-row-sticky` z-index declaration
- use correct z-index for sticky row elements
- use correct z-index for header row sticky element

closes #773

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -372,14 +372,6 @@
         line-height: variables.$clr_baselineRem_1;
       }
     }
-
-    .datagrid-action-overflow {
-      z-index: map.get(variables.$clr-layers, datagrid-popover);
-    }
-
-    .datagrid-row-sticky {
-      z-index: map.get(variables.$clr-layers, datagrid-row-sticky);
-    }
   }
 
   .datagrid-row-sticky {
@@ -393,7 +385,7 @@
     flex-wrap: nowrap;
     position: sticky;
     left: 0;
-    z-index: map.get(variables.$clr-layers, datagrid-header-sticky);
+    z-index: map.get(variables.$clr-layers, datagrid-row-sticky);
 
     .datagrid-cell:last-child {
       &:after {
@@ -508,7 +500,7 @@
 
       .datagrid-row-sticky {
         @include clr-datagrid-header-bg;
-        z-index: map.get(variables.$clr-layers, datagrid-sticky-header);
+        z-index: map.get(variables.$clr-layers, datagrid-header-sticky);
       }
 
       &:hover {
